// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonSchemaRenderer component A Heading widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  font-weight: normal;
}

.c6 {
  margin: 0;
  font-size: 34px;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <h2
      className="c5 c6"
    >
      Something Important
    </h2>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A HighlightedName widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  padding: 8px;
  font-size: 14px;
  color: #2A506F;
  background-color: #222;
}

.c6 {
  display: inline-block;
  border-radius: 2px;
  line-height: 1;
}

.c7 {
  color: white;
  background-color: #222;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <span
      className="c5 c6 c7"
    >
      Jellyfish
    </span>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A Link widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c5:active,
.c5:hover {
  color: hsl(196.29999999999995,100%,37.5%);
}

.c6 {
  color: #00AEEF;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <a
      className="c5 c6"
      color="primary.main"
      href="https://trello.com/b/lEIoUMKY"
      rel="noopener"
      target="_blank"
    >
      View trello board
    </a>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A List widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c7:active,
.c7:hover {
  color: hsl(196.29999999999995,100%,37.5%);
}

.c8 {
  color: #00AEEF;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  padding: 0;
  margin: 0;
  list-style: none;
}

.c5 > li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > li:first-child {
  margin-top: 0;
}

.c5 > li:last-child {
  margin-bottom: 0;
}

.c5 > li:before {
  text-align: center;
}

.c6 {
  counter-reset: ordered-list-counter;
}

.c6 > li {
  margin: 16px 0;
  counter-increment: ordered-list-counter;
}

.c6 > li:before {
  content: counter(ordered-list-counter);
  margin-right: 8px;
  background: #1496E1;
  height: 1.5em;
  width: 1.5em;
  min-width: 1.5em;
  line-height: 1.5em;
  color: white;
  border-radius: 50%;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <ol
      className="c5 c6 "
    >
      <li>
        <div
          className="c2 c3 c4 "
        >
          <a
            className="c7 c8"
            color="primary.main"
            href="https://jel.ly.fish/user"
          >
            user
          </a>
        </div>
      </li>
      <li>
        <div
          className="c2 c3 c4 "
        >
          <a
            className="c7 c8"
            color="primary.main"
            href="https://jel.ly.fish/org"
          >
            org
          </a>
        </div>
      </li>
      <li>
        <div
          className="c2 c3 c4 "
        >
          <a
            className="c7 c8"
            color="primary.main"
            href="https://jel.ly.fish/issue"
          >
            issue
          </a>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A Tag widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  white-space: pre;
}

.c10 {
  font-weight: 600;
}

.c9 {
  font-size: 12px;
  color: #1496E1;
}

.c7 {
  background-color: #e8f5fc;
  border: 1px solid #1496E1;
  border-radius: 2px;
  line-height: 1.5;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 "
    >
      <div
        className="c2 c6 c5 c7"
      >
        <div
          className="c8 c9"
        >
          subscription: 
        </div>
        <div
          className="c10 c9"
        >
          premium
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A badge widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  font-size: 12px;
  color: #0650E5;
  background-color: #D7E4FE;
}

.c6 {
  display: inline-block;
  border-radius: 1em;
  line-height: 1;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <span
      className="c5 c6 "
    >
      closed
    </span>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A boolean 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field Title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className=""
    >
      true
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A button group widget 1`] = `
.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #2A506F;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c7:hover {
  box-shadow: 0px 0px 0px 2px #2A506F;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #00AEEF;
}

.c7:focus > circle,
.c7:focus > ellipse,
.c7:focus > line,
.c7:focus > path,
.c7:focus > polygon,
.c7:focus > polyline,
.c7:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #00AEEF;
}

.c7:focus::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c8 {
  font-weight: 600;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c8:disabled {
  cursor: not-allowed;
}

.c9 {
  color: #2A506F;
  border-color: #2A506F;
}

.c9 svg {
  color: #527699 !important;
}

.c9:hover:enabled,
.c9:focus:enabled,
.c9:active:enabled {
  box-shadow: none;
  background: #2A506F;
  border-color: #2A506F;
  color: white;
  opacity: initial;
}

.c9:hover:enabled svg,
.c9:focus:enabled svg,
.c9:active:enabled svg {
  color: white !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > *:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c6 > *:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:not(:last-child) {
  border-right: 0;
}

.c6 > *:not(:last-child):not(:first-child) {
  border-radius: 0;
}

.c6 > *:hover {
  z-index: 1;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 c6"
    >
      <a
        className="c7 c8 c9 "
        href="https://jel.ly.fish/item 1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        item 1
      </a>
      <a
        className="c7 c8 c9 "
        href="https://jel.ly.fish/item 2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        item 2
      </a>
      <a
        className="c7 c8 c9 "
        href="https://jel.ly.fish/item 3"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        item 3
      </a>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A button widget 1`] = `
.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background-color: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #00AEEF;
}

.c5:focus > circle,
.c5:focus > ellipse,
.c5:focus > line,
.c5:focus > path,
.c5:focus > polygon,
.c5:focus > polyline,
.c5:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #00AEEF;
}

.c5:focus::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c6 {
  font-weight: 600;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c6:disabled {
  cursor: not-allowed;
}

.c7 {
  color: white;
}

.c7:hover:enabled,
.c7:focus:enabled,
.c7:active:enabled {
  box-shadow: none;
  background: hsl(196.29999999999995,100%,37.5%);
  border-color: hsl(196.29999999999995,100%,37.5%);
  color: white;
  opacity: initial;
}

.c7:hover:enabled svg,
.c7:focus:enabled svg,
.c7:active:enabled svg {
  color: white !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <a
      className="c5 c6 c7 "
      disabled={false}
      href="http://jel.ly.fish/issue"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      target="_blank"
    >
      issue
    </a>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A color widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  width: 100px;
  height: 60px;
  color: #FFF;
  background-color: #ff0000;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 c6"
    >
      <div
        className=""
      >
        Danger
      </div>
      <div
        className=""
      >
        #ff0000
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A default value 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
/>
`;

exports[`JsonSchemaRenderer component A drop-down button widget 1`] = `
.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #2A506F;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #2A506F;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #00AEEF;
}

.c6:focus > circle,
.c6:focus > ellipse,
.c6:focus > line,
.c6:focus > path,
.c6:focus > polygon,
.c6:focus > polyline,
.c6:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #00AEEF;
}

.c6:focus::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c11 {
  margin-right: 8px;
}

.c7 {
  font-weight: 600;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c7:disabled {
  cursor: not-allowed;
}

.c8 {
  color: #2A506F;
  border-color: #2A506F;
}

.c8 svg {
  color: #527699 !important;
}

.c8:hover:enabled,
.c8:focus:enabled,
.c8:active:enabled {
  box-shadow: none;
  background: #2A506F;
  border-color: #2A506F;
  color: white;
  opacity: initial;
}

.c8:hover:enabled svg,
.c8:focus:enabled svg,
.c8:active:enabled svg {
  color: white !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: inline-block;
  border-radius: 3px;
  vertical-align: top;
  position: relative;
}

.c5 svg {
  width: 12px;
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.c9 {
  margin: 0;
  width: 100%;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 "
      disabled={false}
    >
      <button
        className="c6 c7 c8 c9"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="c2 c10"
        >
          <div
            className="c2 c11"
          >
            Links
          </div>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-down fa-w-14 "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A hidden field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          Shown
        </div>
      </div>
      <div
        className=""
      >
        This should be shown
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A hidden title 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className=""
    >
      No title shown
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A markdown field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: normal;
}

.c7 {
  margin: 0;
  font-size: 58px;
}

.c8 {
  margin: 0;
  font-size: 34px;
}

.c5 * {
  box-sizing: border-box;
}

.c5 code {
  background-color: #f4f4f4;
  padding: 0.2em 0px;
  margin: 0px;
  border-radius: 3px;
  line-height: 1.2;
}

.c5 pre {
  background-color: #f4f4f4;
}

.c5 pre > code {
  display: block;
  background: none;
  overflow-y: auto;
}

.c5 code,
.c5 kbd,
.c5 pre {
  font-family: 'Ubuntu Mono','Courier New',monospace;
}

.c5 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #2A506F;
  vertical-align: middle;
  background-color: rgba(244,244,244,0.7);
  border: solid 1px #c6c8c9;
  border-bottom-color: hsl(200,2.7%,70.4%);
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 hsl(200,2.7%,70.4%);
}

.c5 dl {
  padding: 0;
}

.c5 dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: 600;
}

.c5 dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.c5 td,
.c5 th {
  padding: 0;
}

.c5 table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: 100%;
  overflow: auto;
}

.c5 table th {
  font-weight: 600;
}

.c5 table th,
.c5 table td {
  padding: 6px 13px;
  border: 1px solid #c6c8c9;
}

.c5 table tr {
  background-color: #fff;
  border-top: 1px solid #f4f4f4;
}

.c5 table tr:nth-child(2n) {
  background-color: #f4f4f4;
}

.c5 blockquote {
  margin: 0;
}

.c5 blockquote,
.c5 dl,
.c5 table {
  margin-top: 0;
  margin-bottom: 16px;
}

.c5 blockquote {
  padding: 0 1em;
  color: #2A506F;
  border-left: 0.25em solid #c6c8c9;
}

.c5 blockquote > :first-child {
  margin-top: 0;
}

.c5 blockquote > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c5"
    >
      <div>
        <h1
          className="c6 c7"
        >
          Something Important
        </h1>
        

        <h2
          className="c6 c8"
        >
          Something less important
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A materialized field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          Name
        </div>
      </div>
      <div
        className=""
      >
        John Smith
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A null object 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
/>
`;

exports[`JsonSchemaRenderer component A number 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field Title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className=""
    >
      4.5
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A string 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c8 {
  text-align: left;
  white-space: normal;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field Title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className="c8 "
    >
      A string value
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A string-interpolated value 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Mentions
      </div>
    </div>
    <div
      className=""
    >
      4 mentions
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A truncated array of strings field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c2 c3 c4 "
      >
        <div
          className=""
        >
          item 1
        </div>
      </div>
      <div
        className="c2 c3 c4 "
      >
        <div
          className=""
        >
          item 2
        </div>
      </div>
      <div
        className="c2 c3 c4 "
      >
        <div
          className=""
        >
          item 3
        </div>
      </div>
      <div
        className="c2 c3 c4 "
      >
        <div
          className=""
        >
          item 4
        </div>
      </div>
      <div
        className="c2 c3 c4 "
      >
        <div
          className=""
        >
          + 2 more
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A truncated string 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c5"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut facilisis urna. Suspendisse ullamcorper, velit ut auctor vulputate, nibh sem finibus ipsum, vel bibendum tellus nulla non nunc. In porta velit odio. Vivamus nibh dolor, bibendum vel velit sit amet, suscipit lobortis leo. Donec tempus justo non nisi pulvinar, vitae fringilla ligula aliquam. Proin efficitur tellus ac tincidunt iaculis. Duis mattis urna quis libero feugiat, nec pretium felis ornare.
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A uri field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c5:active,
.c5:hover {
  color: hsl(196.29999999999995,100%,37.5%);
}

.c6 {
  color: #00AEEF;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <a
      className="c5 c6"
      color="primary.main"
      href="https://google.com"
    >
      https://google.com
    </a>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An Avatar widget 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: url(https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg) no-repeat center center;
  background-size: cover;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 34px;
  width: 34px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c5 StyledAvatar-sc-1suyamb-1"
    />
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An Avatar widget without image 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b7bed3;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 34px;
  width: 34px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  color: white;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    
    <div
      className="c5 StyledAvatar-sc-1suyamb-1"
    >
      <div
        className="c6"
      >
        JF
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An Img widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  display: block;
  max-width: 100%;
  height: auto;
  width: 200px;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <img
      alt="Jellyfish"
      className="c5"
      src="https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg"
      width={200}
    />
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An array of strings field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  font-size: 12px;
  color: #BA0C00;
  background-color: #FFD5D2;
}

.c8 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  font-size: 12px;
  color: #0650E5;
  background-color: #D7E4FE;
}

.c9 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  font-size: 12px;
  color: #3C2DE7;
  background-color: #D6D3FA;
}

.c7 {
  display: inline-block;
  border-radius: 1em;
  line-height: 1;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c2 c3 c4 "
      >
        <span
          className="c6 c7 "
        >
          first item
        </span>
      </div>
      <div
        className="c2 c3 c4 "
      >
        <span
          className="c8 c7 "
        >
          second item
        </span>
      </div>
      <div
        className="c2 c3 c4 "
      >
        <span
          className="c9 c7 "
        >
          third item
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An email field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c5:active,
.c5:hover {
  color: hsl(196.29999999999995,100%,37.5%);
}

.c6 {
  color: #00AEEF;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <a
      className="c5 c6"
      color="primary.main"
      href="mailto:user@balena.io"
    >
      user@balena.io
    </a>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An evaluated value 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px #00AEEF;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 20px;
  width: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 2px;
  stroke: #00AEEF;
  width: 20px;
  height: 20px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled]) + div,
.c8:hover input:not([disabled]) + span {
  border-color: #DDE1f0;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked + span > span {
  left: calc( 40px - 20px );
  background: #00AEEF;
}

.c10 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 > label > div > div,
.c7 > label > div > span {
  background-color: white;
}

.c7 > label > span {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
}

.c7 label input + div {
  border-color: #00AEEF;
  background: #00AEEF;
}

.c7 label input + div > svg {
  stroke: #fff;
}

.c7 label[disabled] {
  opacity: 0.4;
}

.c7 label:hover input:not([disabled]) + span > span {
  border-color: #009dd7;
  background: #009dd7;
}

.c7 label:hover input:not([disabled]) + div {
  border-color: #527699!important;
}

.c7 label:hover input:not([disabled]) + div {
  border-color: #009dd7 !important;
  background: #009dd7;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

@media only screen and (max-width:768px) {
  .c12 {
    border: solid 1px #00AEEF;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Multiple Owners
      </div>
    </div>
    <div
      className="c7 "
    >
      <label
        checked={true}
        className="c8"
        onClick={[Function]}
      >
        <div
          checked={true}
          className="c9 c10"
        >
          <input
            checked={true}
            className="c11"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            checked={true}
            className="c12 "
          >
            <svg
              checked={true}
              className="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An integer 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field Title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className=""
    >
      5000
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An invalid value 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c9 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  font-weight: 600;
}

.c11 {
  font-size: 85%;
  color: #527699;
}

.c7 {
  margin-bottom: auto;
  margin-right: 8px;
  color: #FF423D;
}

.c8 {
  color: #eb0800;
}

.c6 {
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 c6"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="c7"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-ban fa-w-16 "
          data-icon="ban"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.034 8 8 119.033 8 256s111.034 248 248 248 248-111.034 248-248S392.967 8 256 8zm130.108 117.892c65.448 65.448 70 165.481 20.677 235.637L150.47 105.216c70.204-49.356 170.226-44.735 235.638 20.676zM125.892 386.108c-65.448-65.448-70-165.481-20.677-235.637L361.53 406.784c-70.203 49.356-170.226 44.736-235.638-20.676z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="c8"
      >
        Invalid data/schema
      </span>
    </div>
    <div
      className="c2 c9"
    >
      <div
        className="c10 "
      >
        Field Title
      </div>
      <div
        className="c11"
      >
        Field description
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c9"
      >
        <div
          className="c10 "
        >
          Eh
        </div>
      </div>
      <div
        className=""
      >
        what
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An object with various properties 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px #DDE1f0;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 20px;
  width: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled]) + div,
.c9:hover input:not([disabled]) + span {
  border-color: #DDE1f0;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked + span > span {
  left: calc( 40px - 20px );
  background: #00AEEF;
}

.c11 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c8 > label > div > div,
.c8 > label > div > span {
  background-color: white;
}

.c8 > label > span {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
}

.c8 label[disabled] {
  opacity: 0.4;
}

.c8 label:hover input:not([disabled]) + span > span {
  border-color: #009dd7;
  background: #009dd7;
}

.c8 label:hover input:not([disabled]) + div {
  border-color: #527699!important;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

@media only screen and (max-width:768px) {
  .c13 {
    border: solid 1px #DDE1f0;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field Title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          A String Field
        </div>
      </div>
      <div
        className=""
      >
        The string value
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          A Number Field
        </div>
      </div>
      <div
        className=""
      >
        12.345
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          An Integer Field
        </div>
      </div>
      <div
        className=""
      >
        5000
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          A Boolean Field
        </div>
      </div>
      <div
        className="c8 "
      >
        <label
          checked={false}
          className="c9"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="c10 c11"
          >
            <input
              checked={false}
              className="c12"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <div
              checked={false}
              className="c13 "
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component Re-ordered fields 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          Field B
        </div>
      </div>
      <div
        className=""
      >
        field B value
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          Field C
        </div>
      </div>
      <div
        className=""
      >
        field C value
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          Field A
        </div>
      </div>
      <div
        className=""
      >
        field A value
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component Using context functions 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className=""
    >
      Hello Jellyfish
    </div>
  </div>
</div>
`;
